kubernetes/apps/networking/external-ingress/app/truenas/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-truenas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: https
      port: 443
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-truenas
  namespace: networking
subsets:
  - addresses:
      - ip: "${TRUENAS_IP_ADDRESS}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app minio-truenas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: s3.truenas.${SECRET_DOMAIN_LOCAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - secretName: "minio-${SECRET_DOMAIN/./-}-production-tls"
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-ui-truenas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: https
      port: 443
      targetPort: 9001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-ui-truenas
  namespace: networking
subsets:
  - addresses:
      - ip: "${TRUENAS_IP_ADDRESS}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app minio-ui-truenas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: ui.s3.truenas.${SECRET_DOMAIN_LOCAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - secretName: "minio-ui-${SECRET_DOMAIN/./-}-production-tls"
