kubernetes/apps/networking/external-ingress/app/truenas/truenas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app truenas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: https
      port: 443
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: networking
subsets:
  - addresses:
      - ip: "${TRUENAS_IP_ADDRESS}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app truenas
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: TrueNAS SCALE
    hajimari.io/icon: simple-icons:truenas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: truenas.${SECRET_DOMAIN_LOCAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - secretName: "truenas-${SECRET_DOMAIN/./-}-production-tls"
